# supercv

./: .env  .gitignore  README.md
api/: .gitignore  Cargo.toml  main.rs  resume.txt
api/migrations/: 001_init.sql
api/src/: lib.rs  main.rs
api/src/application/: gpt_api.rs  mod.rs  prompt_service.rs
api/src/assessts/latex/basic_template/: main.tex  particulars.tex
api/src/domain/: job_description.rs  mod.rs
api/src/domain/models/: auth.rs  jwt.rs  mod.rs  user.rs
api/src/infrastructure/: openai.rs
api/src/interface/: handler.rs  routes.rs
api/src/services/: prompt.rs
api/src/test_utils/: mocks.rs
api/tests/: health.rs  health_test.rs  match_test.rs  mod.rs
api/tests/common/: mod.rs
chrome-extension/: package-lock.json  package.json  vite.config.ts
chrome-extension/public/: manifest.json
chrome-extension/src/: App.tsx  background.ts  content.ts
src/: main.rs
src/models/: message_payload.rs  mod.rs
src/services/: message.rs  mod.rs  openai.rs
