[package]
name = "supercv"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
hyper = "1"
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
anyhow = "1.0"
async-trait = "0.1"
tower = "0.4"
tower-http = "0.4"
http = "0.2"

[dev-dependencies]
http-body-util = "0.1"
hyper = "1"


[lib]
name = "supercv"
path = "src/lib.rs"
