[package]
name = "supercv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.7"
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
http = "0.2"
hyper = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }

tokio = { version = "1.37", features = ["full"] }
tower = "0.4"
tower-http = "0.4"


[dev-dependencies]
http-body-util = "0.1"
hyper = "1"


[lib]
name = "supercv"
path = "src/lib.rs"
